elastic-stack/examples/tls/tls-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: elastic-gateway
  namespace: elastic-stack
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate # 在网关层解密
        certificateRefs:
          - name: elastic-stack-tls-secret # 必须与 Certificate 中的 secretName 一致
      allowedRoutes:
        namespaces:
          from: Same
